gontabilizador/templates/gontabilizador-service.yaml
# app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gontabilizador-app
spec:
  selector:
    app: gontabilizador-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
